--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Welcome to Web Lecture</title>
+<title>Document</title>
 </head>
 <body>
-<h1>Hello HTML5</h1>
+<h1>Welcome to Web Lecture</h1>
+<h2>Hello HTML5</h2>
 <p>학번 : 202358011</p>
 <p>이름 : 정민수</p>
 </body>
